test: service unit 테스트완료